intermediate fixing